--- a/carpedata.bib
+++ b/carpedata.bib
@@ -223,3 +223,23 @@ time,...}},
  address = {New York, NY, USA},
  keywords = {personalized web search, template-based representation, view and layout editing, web content extraction},
 } 
+@article{Shadbolt:2006:SWR:1155313.1155373,
+ author = {Shadbolt, Nigel and Berners-Lee, Tim and Hall, Wendy},
+ title = {The Semantic Web Revisited},
+ journal = {IEEE Intelligent Systems},
+ issue_date = {May 2006},
+ volume = {21},
+ number = {3},
+ month = may,
+ year = {2006},
+ issn = {1541-1672},
+ pages = {96--101},
+ numpages = {6},
+ url = {http://dx.doi.org/10.1109/MIS.2006.62},
+ doi = {10.1109/MIS.2006.62},
+ acmid = {1155373},
+ publisher = {IEEE Educational Activities Department},
+ address = {Piscataway, NJ, USA},
+ keywords = {Semantic Web, Semantic Web, semantic networks, standards, e-science, Web services, Web services, e-science, semantic networks, standards},
+} 
+
